--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,149 @@
+body{
+    position: absolute;
+    height: 2300px;
+    margin: 0;
+    padding:0;
+    left: 0;
+    right: 0;
+    font-family: sans-serif;
+}
 
+a{
+text-decoration: none;
+}
 
+.all {
+    position: absolute;
+    width: 90%;
+    height: 500px;
+    margin-left: 5%;
+    margin-right: 5%;
+}
 
+.hero{
+    position: absolute;
+    width:100%;
+    height: 763px;
+    background: #034319;
+}
 
+.navbar{
+    position: absolute;
+    width: 100%;
+    top: 20px;
+}
 
+.navbar img{
+    cursor: pointer;
+}
 
+.pages{
+    float: right;
+    position: relative;
+    top: 20px;
+    right: 15%;
+}
 
+.pages a{
+    margin-left: 50px;
+    font-family: sans-serif;
+    font-weight: bold;
+    line-height: 26px;
+    color: coral;
+}
 
+.registration{
+    position: absolute;
+    right: 0;
+    top: 15px;
+    height: 35px;
+    background: #f19151;
+    border: 1px solid #957400;
+    border-radius: 18px;
+    font-weight: bold;
+    font-size: 14px;
+    color: rgb(10, 57, 4);
+}
 
+.registration a{
+    color: #034319;
+    padding: 10px 10px;
+}
 
+.header{
+    position: absolute;
+    top: 174px;
+    width: 100%;
+    margin-left: 4%;
+}
 
+.header h1{
+    width: 100%;
+    left: 0px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 44px;
+    line-height:40px;
+    color: #957400;
+    margin-top: 150px;
+}
+.header p{
+    margin-left: 5px;
+    width: 100%;
+    font-family: sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 26px;
+    color: beige;
+}
 
+.header img{
+    position: absolute;
+    right: 40px;
+    height: 589px;
+    top:0;
+}
+
+.products{
+    display: flex;
+    flex: direction row;
+    align-items: flex-start;
+    position: absolute;
+    height: 290px;
+    left: 5%;
+    right: 5%;
+    top: 820px;
+}
+
+.img1, .img2, .img3{
+    max-width: 100%;
+    max-height: 100%;
+    margin: 10px 50px;
+}
+
+.buy{
+    position: absolute;
+    width: 100%;
+    top: 1180px;
+}
+
+.buy h1{
+    font-weight:bold;
+    font-size: 30px;
+    line-height: 35px;
+    color: orange;
+}
+
+.buy p{
+    width: 50%;
+    font-family: sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 22px;
+    line-height: 26px;
+    color: black;
+}
+
+.cart{
+   
+}
