--- a/css/products.css
+++ b/css/products.css
@@ -1,11 +1,93 @@
+
 body{
-    background-image: url(https://i.pinimg.com/originals/4a/9e/d6/4a9ed6b86be396f05ba5b4d7b656b288.jpg);
-    background-size: cover;
-    background-position: center;
+  position: absolute;
+  height: 2300px;
+  margin: 100px;
+  padding:0;
+  left: 0;
+  right: 0;
+  font-family: sans-serif;
+  background-image: url(https://i.pinimg.com/originals/4a/9e/d6/4a9ed6b86be396f05ba5b4d7b656b288.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+a{
+text-decoration: none;
+}
+
+.all {
+  position: absolute;
+  width: 90%;
+  height: 500px;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+.hero{
+  position: absolute;
+  width:10%;
+  height: 763px;
+}
+
+.navbar{
+  position: absolute;
+  width: 10%;
+  top: 20px;
+  float: left;
+}
+
+.pages{
+  float: right;
+  position: relative;
+  top: 20px;
+  right: 15%;
+}
+
+.pages a{
+  margin-left: 50px;
+  font-family: sans-serif;
+  font-weight: bold;
+  line-height: 26px;
+  color: rgb(3, 52, 4);
+}
+
+.registration{
+  position: absolute;
+  right: 0;
+  top: 15px;
+  height: 35px;
+  background: #f19151;
+  border: 1px solid #957400;
+  border-radius: 18px;
+  font-weight: bold;
+  font-size: 14px;
+  color: rgb(10, 57, 4);
+}
+
+.registration a{
+  color: #034319;
+  padding: 10px 10px;
+}
+
+.header{
+  position: absolute;
+  top: 174px;
+  width: 100%;
+  margin-left: 4%;
+
+}
+.container h1{
+  float: right;
 }
 .card-img-top {
-    height: 250px;
+    
+    width: 80%;
+    padding: 40px;
+    height: 60%;
     object-fit: cover;
+    float: none !important;
+
   }
   
   .col-md-4:nth-child(3n+1) {
@@ -13,31 +95,24 @@ body{
   }
   
   @media (max-width: 991px) {
-    .col-md-4:nth-child(3n+1) {
-      clear: none;
-    } 
-}
+    .col-md-4:nth-child(3n+1) 
+      
+  } 
+  
 .card{
-    padding: 10px;
-    margin-right: 800px;
-    margin-bottom: 200px;
+ 
     display: flex;
     flex-direction: row;
-    align-items: left;
-    margin-bottom: 2px;
+    align-items: center;
+    margin-bottom: 20px;
 }
 
 
 .col-md-4 {
-    padding: 10px;
-    margin: 20px;
+    padding: 90px;
+    margin: 50px;
   }
   
-  .card img {
-    margin-bottom: 10px;
-    width: auto;
-    margin-left: 20px;
-  }
   
   .card-body{
     width: 10%;
@@ -57,3 +132,71 @@ body{
   }
   
   
+  .container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .row {
+    display: flex;
+    flex-direction: column;
+    margin: 30px;
+    padding: 30;
+    text-align: center;
+  }
+  
+  
+  .card-text {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .card-text h5 {
+    margin-top: 0;
+  }
+  
+  .card-text p {
+    margin-bottom: 0;
+  }
+  
+  .card-text button {
+    margin-top: 10px;
+  }
+  
+  .card-body{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-style: 32px;
+    font-size: bolder;
+    fo
+  }
+
+  footer {
+    background-image: none;
+    color: rgb(9, 111, 7);
+    padding: 10px;
+    bottom: 100;
+    margin: auto;
+   width: 100%;
+   position: absolute;
+   bottom: 10;
+   left:: 10;
+    
+  }
+  
+  .contact-info, .privacy-policy {
+    margin-bottom: 10px;
+  }
+  
+  .privacy-policy a {
+    color: white;
+    text-decoration: none;
+  }
+  
+  .privacy-policy a:hover {
+    text-decoration: underline;
+  }
